[tool.poetry]
name = "black-dragon-site"
version = "0.1.0"
description = ""
authors = ["nixl <nilixen@yandex.ru>"]
readme = "README.md"
packages = [{include = "black_dragon_site"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
